--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       e.preventDefault();
       var uuid = document.getElementById('uuid').value.trim();
       if(uuid) {
-        window.location.href = "/dccs/" + encodeURIComponent(uuid) + ".xml";
+        window.location.href = "/DCCView/dccs/" + encodeURIComponent(uuid) + ".xml";
       }
     });
   </script>
